Fix flickering

--- a/tapjoyads/public/stylesheets/games/tapjoygames.css
+++ b/tapjoyads/public/stylesheets/games/tapjoygames.css
@@ -1351,13 +1351,6 @@ body {
 #jqt .out {
   z-index: 0 !important;
 }
-#jqt.supports3d {
-  -webkit-perspective: 800;
-  -webkit-transform-style: preserve-3d;
-}
-#jqt.supports3d > * {
-  -webkit-transform: translate3d(0,0,0) rotate(0) scale(1);
-}
 #jqt .fade.in {
   -webkit-animation-name: fadeIn;
 }
